crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_let_directive_without_semicolon.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
expression: snapshot_output(output)
---
status: Some(1)
stdout:
UNSUPPORTED rejects_let_directive_without_semicolon
  //@ let directive must end with `;`
  src/main.rs:1:1: 6:2

stderr:
