crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_loop_invariant_on_entry.snap
---
source: crates/tsuno-driver/tests/verify_cli.rs
expression: snapshot_output(output)
---
status: Some(1)
stdout:
FAIL bad_loop
  loop invariant does not hold
  src/main.rs:7:7: 7:31

stderr:
