crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_loops_without_invariants.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
UNSUPPORTED bad_loop
  loop at bb1 requires exactly one //@ inv before the body
  src/main.rs:2:11: 2:16

stderr:
