crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_mixed_integer_width_spec_var.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
UNSUPPORTED rejects_mixed_integer_width_spec_var
  type mismatch between `i32` and `i64`
  src/main.rs:2:5: 2:31
PASS main
  all assertions discharged

stderr:
