crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_multiple_loop_invariants.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
UNSUPPORTED bad_loop
  loop header may contain exactly one //@ inv before the body
  src/main.rs:6:9: 6:19

stderr:
