crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_mut_ref_equality.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
UNSUPPORTED rejects_mut_ref_equality
  `==` and `!=` are not supported for `Mut<i32>`
  src/main.rs:3:5: 3:31
PASS main
  all assertions discharged

stderr:
