crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_non_binding_interpolation.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
UNSUPPORTED main
  expected `}` after Rust binding name in `{...}`
  src/main.rs:4:2: 4:2

stderr:
