crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_non_witness_binder_in_assert.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
UNSUPPORTED main
  expected a //@ assert predicate
  src/main.rs:8:2: 8:2

stderr:
